tests/typechecker/should_fail/rename_3.csp
channel a : Bool
channel b : Bool

channel c : Int.Bool

P = STOP [[ a <- b.true ]]